--- a/bootstrap/root/kustomization.yaml
+++ b/bootstrap/root/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 
 resources:
   - bootstrap.yaml
-  - system.yaml
-  - platform.yaml
+  # - system.yaml
+  # - platform.yaml
   - apps.yaml
 
 namespace: argocd
