--- a/bootstrap/Makefile
+++ b/bootstrap/Makefile
@@ -14,4 +14,5 @@ argocd:
 root:
 	kustomize build ./root | kubectl apply -f -
 	kubectl -n argocd wait --timeout=300s --for condition=ResourcesUpToDate \
+		applicationset/bootstrap \
 		applicationset/apps
