--- a/bootstrap/root/bootstrap.yaml
+++ b/bootstrap/root/bootstrap.yaml
@@ -1,24 +1,24 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: ApplicationSet
-# metadata:
-#   name: bootstrap
-# spec:
-#   generators:
-#     - git:
-#         repoURL: https://github.com/khuedoan/homelab.git
-#         revision: master
-#         directories:
-#           - path: bootstrap/*
-#   template:
-#     metadata:
-#       name: '{{path.basename}}'
-#     spec:
-#       destination:
-#         name: in-cluster
-#       project: default
-#       source:
-#         repoURL: https://github.com/khuedoan/homelab.git
-#         path: '{{path}}'
-#       syncPolicy:
-#         automated:
-#           selfHeal: true
+apiVersion: argoproj.io/v1alpha1
+kind: ApplicationSet
+metadata:
+  name: bootstrap
+spec:
+  generators:
+    - git:
+        repoURL: https://github.com/nathanshannon/homecluster.git
+        revision: main
+        directories:
+          - path: bootstrap/*
+  template:
+    metadata:
+      name: '{{path.basename}}'
+    spec:
+      destination:
+        name: in-cluster
+      project: default
+      source:
+        repoURL: https://github.com/nathanshannon/homecluster.git
+        path: '{{path}}'
+      syncPolicy:
+        automated:
+          selfHeal: true
