--- a/apps/radarr/Chart.yaml
+++ b/apps/radarr/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: sonarr
+name: radarr
 version: 0.0.0
 dependencies:
-  - name: sonarr
-    version: 15.2.1
+  - name: radarr
+    version: 15.1.1
     repository: https://k8s-at-home.com/charts/
