--- a/apps/radarr/values.yaml
+++ b/apps/radarr/values.yaml
@@ -1,7 +1,7 @@
 radarr:
   ingress:
     main:
-      enabled: true
+      enabled: false
       ingressClassName: nginx
       hosts:
         - host: &host radarr.home.nathanshannon.net
