--- a/bootstrap/root/system.yaml
+++ b/bootstrap/root/system.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: systems
+  name: system
 spec:
   generators:
   - git:
       repoURL: https://github.com/nathanshannon/homecluster.git
       revision: main
       directories:
-      - path: systems/*
+      - path: system/*
   template:
     metadata:
       name: '{{path.basename}}'
