--- a/apps/homeassistant/values.yaml
+++ b/apps/homeassistant/values.yaml
@@ -1,10 +1,10 @@
-nzbhydra2:
+home-assistant:
   ingress:
     main:
       enabled: true
       ingressClassName: nginx
       hosts:
-        - host: &host nzbhydra2.home.nathanshannon.net
+        - host: &host home-assistant.home.nathanshannon.net
           paths:
             - path: /
               pathType: Prefix
