--- a/apps/radarr/values.yaml
+++ b/apps/radarr/values.yaml
@@ -6,5 +6,5 @@ radarr:
       hosts:
         - host: &host radarr.home.nathanshannon.net
           paths:
-            - path: /
+            - path: /radarr
               pathType: Prefix 
