--- a/apps/tautulli/values.yaml
+++ b/apps/tautulli/values.yaml
@@ -6,5 +6,5 @@ tautulli:
       hosts:
         - host: &host tautulli.home.nathanshannon.net
           paths:
-            - path: /
+            - path: /tautulli
               pathType: Prefix 
